#16: update stock
